--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -91,7 +91,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/mainprofile_thin_border"
                 android:gravity="center_vertical"
-                android:hint="NAME (optional)"
+                android:hint="@string/name_optional"
                 android:inputType="textPersonName"
                 android:maxLines="1"
                 android:paddingLeft="8dp"
@@ -104,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="75dp"
-                android:text="Gender"
+                android:text="@string/app_settings.edit_profile.gender"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp" />
 
@@ -114,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="200dp"
                 android:layout_marginTop="75dp"
-                android:text="DOB"
+                android:text="@string/dob"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp" />
 
@@ -177,7 +177,7 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:paddingTop="8dp"
-                android:text="ADD"
+                android:text="@string/app_settings.edit_prefs.add"
                 android:textColor="@color/white" />
 
         </RelativeLayout>
