--- a/MyCity4Kids/MyCity4Kids/res/menu/menu_bottom_navigation_bar.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/menu_bottom_navigation_bar.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/action_home"
         android:icon="@drawable/selector_home_tab"
-        android:title="@string/home" />
+        android:title="@string/navigation_bar.home" />
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/selector_profile_tab"
