--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -452,4 +452,6 @@
     <color name="profile_progress">#f2f2f2</color>
     <color name="kids_detail">#f9f9f9</color>
 
+    <color name="all_drafts.title">#4a4a4a</color>
+
 </resources>
