--- a/MyCity4Kids/MyCity4Kids/res/layout/change_password_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/change_password_tab_fragment.xml
@@ -112,7 +112,7 @@
         android:gravity="center"
         android:padding="15dp"
         android:text="@string/app_settings.change_pass.save"
-        android:textColor="@color/app_settings.change_pass.save"
+        android:textColor="@color/app_red"
         android:textSize="17sp"
         app:fontName="oswald_regular.ttf" />
 </RelativeLayout>
