--- a/MyCity4Kids/MyCity4Kids/res/drawable/button_round.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/button_round.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/app_blue" />
+        android:color="@color/app_red" />
     <corners android:radius="10dp" />
-    <solid android:color="@color/app_blue" />
+    <solid android:color="@color/app_red" />
 
 </shape>
