--- a/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
@@ -40,8 +40,19 @@
                 android:onClick="onClick"
                 android:text=""
                 android:textColor="@color/app_light_black"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
+
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="view profile"
+                android:textColor="@color/app_red"
+                android:textSize="13sp"
+                app:fontName="oswald.ttf" />
+
         </LinearLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -124,9 +135,9 @@
             android:drawableLeft="@drawable/ic_bookmark"
             android:drawablePadding="20dp"
             android:drawableTint="#d54058"
+            android:gravity="center_vertical"
             android:paddingBottom="12dp"
             android:paddingLeft="30dp"
-            android:gravity="center_vertical"
             android:paddingRight="16dp"
             android:paddingTop="12dp"
             android:text="@string/user_activities.tabs.bookmark"
