--- a/MyCity4Kids/MyCity4Kids/res/layout/user_activities_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_activities_activity.xml
@@ -49,7 +49,7 @@
         android:elevation="3dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/user_activities.tabbar.indicator"
+        app:tabIndicatorColor="@color/app_red"
         app:tabIndicatorHeight="3dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/user_activities.tabbar.text"
